# notebooks

./: Makefile  README.md  pyproject.toml
jaffle/: jaffle.duckdb  jaffle.ipynb
sales/: sales.csv  sales.duckdb  sales.ipynb
